src/App.css
body {
  background-image: linear-gradient( 109.6deg,  rgba(44,83,131,1) 18.9%, rgba(95,175,201,1) 91.1% );
  background-repeat: no-repeat;
  background-size: cover;
}


.navbar {
  border: solid;
  border-width: 0px 0px 1px 0px;
  /* border-color: rgba(255, 255, 255, 0.5); */
  border-image-slice: 1;
  border-image-source: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255));
}

.navbar-brand {
  font-family: 'Cinzel', serif;
/* font-family: 'Alfa Slab One', cursive; */
/* font-family: 'Comfortaa', cursive; */
/* font-size: 38px; */
}

.brandInitials {
  /* font-family: 'Alfa Slab One', cursive; */
  font-size: 50px;
  
}

.brandName {
  font-size: 15px;
  margin-top: -10px
}
.navbar {
  box-shadow: none;
}

.navbar-nav {
  position: relative;
  color: white;
  font-family: 'Raleway', sans-serif;
  font-size: 16px;
}

.nav-link.active {
border-bottom: 2px solid currentColor;
padding-bottom: 0px;
}

.headshot {
  width: 60%;
}

.myName {
  font-family: 'Cinzel', serif;
  /* font-size: 6vw; */
  font-size: clamp(1.8rem, 4vw, 5rem);

}

.myDetails {
  color: white;
  /* padding: 5px; */
}

.myDescription {
  color: rgb(74, 210, 255);
  font-weight: 100;
  font-size: clamp(0.8rem, 2vw, 1.8rem);
  font-family: 'Montserrat', sans-serif;

}

.mainBody {
  /* background-color: rgba(0, 0, 0, 0.3); */
  /* padding: 20px; */
  width: 75%;
}


 .skillsSection {
  /* background-color: rgba(0, 0, 0, 0.3); */
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.15));
  padding: 0px 25px 0px 25px;
  width: 85%;
}

.header, .skillsHeader {
font-family: 'Montserrat', sans-serif;
font-size: clamp(1rem, 2vw, 5rem);

}

.skillsHeader:after {
  content: ""; /* This is necessary for the pseudo element to work. */ 
  display: block; /* This will put the pseudo element on its own line. */
  margin: 0 auto; /* This will center the border. */
  width: 25%; /* Change this to whatever width you want. */
  border-bottom: 2px solid; /* This creates the border. Replace black with whatever color you want. */

}

.contactBody {
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
  padding: 40px;
  width: 75%;
  color: white;

}

.mainContainer {
  padding-bottom:500px;
}

.header, .skillsHeader, .icon, .footer-copyright, .skillIcon, .strengthIcon, .skillIconName {
color: rgb(255, 255, 255)
}

.header {
  font-weight: 200;
}
.strengthDescription, .skillIconName {
  color: rgb(255, 255, 255, 0);
  margin-top: 5px;
  margin-bottom: 20px;
  font-family: 'Raleway', sans-serif;
  /* display: none */
}

.skillIcon:hover + .skillIconName {
  /* display: block; */
  color: rgb(255, 255, 255);
  /* transform:scale(1.3,1.3); */
}

.skillIconName {
  font-size: clamp(0.8rem, 1.2vw, 1.5rem);
}

/* .strengthIcon:hover + .strengthDescription {
  display: block;
  color: rgb(255, 255, 255)
} */

.skillIcon:hover, .strengthIcon:hover {
  transform:scale(1.3,1.3);
}

.project {
  width: 90%;
}

p {
color: white;
/* font-size: 1.4vw; */
font-size: clamp(0.8rem, 1.4vw, 1.8rem);

font-family: 'Montserrat', sans-serif;
}

h1 {
  font-family: 'Raleway', sans-serif;
}

h2 {
color:white
}
/* 
.leftProject {
  float:right
} */

.mask{
  color: white;
  /* color: black; */
}

.maskTitle {
  color: rgb(0, 191, 255);
  font-size: clamp(15px, 3vw, 42px);
  font-family: 'Raleway', sans-serif;
}

.maskTitle:after {
  content: ""; /* This is necessary for  the pseudo element to work. */ 
  display: block; /* This will put the pseudo element on its own line. */
  margin: 0 auto; /* This will center the border. */
  width: 25%; /* Change this to whatever width you want. */
  border-bottom: 2px solid; /* This creates the border. Replace black with whatever color you want. */
  color:white
}

.maskTools {
  color: rgb(0, 191, 255);
  font-size: clamp(10px, 1.5vw, 40px);
    font-weight: bold;
  font-family: 'Montserrat', sans-serif;
}

.maskDescription {
  font-size: clamp(7px, 1.2vw, 24px);
  font-family: 'Montserrat', sans-serif;
  
}

.myRole {
  font-size: clamp(8px, 1.1vw, 24px);
color: white;
font-family: 'Montserrat', sans-serif;
}

.myRoleLabel {
  color: rgb(0, 191, 255);
  font-weight: 900;
}

.button {
  border: none;
  color: white;
  padding: 1vw 2vw;
  text-align: center;
  display: inline-block;
  font-size: clamp(8px, 1vw, 24px);
  margin: 4px 2px;
  cursor: pointer;
  background-color: rgba(44,83,131,1);
  width: 80%
}


.button:hover {
color:white;
background-color:rgba(95,175,201,1);
}

.login {
  font-size: clamp(7px, 1vw, 24px);
}

h5 {
  font-weight: 700;
}

.subHeader {
margin-bottom: 4vw;
color: rgb(0, 191, 255);
font-size: 3vw;
}

.contactRow {
  margin-top: 5%;
}

.contactEmail, .contactPhone, .contactGithub, .contactLinkedin {
  display: inline-block;
  color: white;
  font-size: 2vw;
  margin: auto;
}

@media only screen and (max-width: 1024px) {
  .resume {
width: 75%;
height: 925px;
  }
}

@media only screen and (max-width: 800px) {
  .resume {
width: 100%;
height: 900px;
  }
}

@media only screen and (max-width: 720px) {
  .resume {
height: 450px;
  }
}

@media only screen and (max-width: 675px) {
  .resume {
height: 650px;
  }
}

@media only screen and (max-width: 375px) {
  .resume {
height: 400px;
  }
}

@media only screen and (max-width: 350px) {
  .resume {
height: 325px;
  }
}

@media only screen and (min-width: 992px) {
  .headshot {
    float:right
  }
  .navbar-nav {
    bottom: -30px;
    padding-right: 3%;
  }
  .contactRow {
    margin-left: 10%
  }
  }

  @media only screen and (max-width: 991px) {
  
    .contactRow {
      margin-left: 10%
    }
  }

